--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -964,6 +964,7 @@ SEARCH FORM
   border-radius: 25px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .search-input {
@@ -981,23 +982,28 @@ SEARCH FORM
 
 .search-submit-btn {
   flex: 1;
-  font-size: 1.1rem;
+  font-size: 1rem;
   border:none;
   background: orangered;
   color: var(--black-95);
   flex: 1;
   letter-spacing: 0.05rem;
-  padding: 1rem 1rem;
+  padding: 1rem 1.2rem;
   cursor: pointer;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   font-weight: 500;
-  text-transform: uppercase;
 }
 
 .search-input:focus,
 .search-submit-btn:focus {
   outline: none;
+}
+
+@media (min-width: 500px) {
+  .search-submit-btn {
+    font-size: 1.1rem;
+  }
 }
 
 @media (min-width: 800px) {
@@ -1383,6 +1389,7 @@ NAVIGATION BAR
     color: var(--brown-10);
     padding: 0 1rem;
     height: initial;
+    font-size: 1rem;
   }
 
   .lg-authenticated-user > 
@@ -1981,19 +1988,24 @@ Post Detail
 .post-detail-post-edit-form {
   display: grid;
   gap: 0.5rem;
-  padding: 1rem;
+  /* padding: 1rem; */
   border-radius: 8px;
-  margin: 1.5rem 0;
-  border: 1px solid lightgray;
+  /* margin: 3rem 0; */
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  /* border: 1px solid lightgray; */
 }
 
 .post-detail-post-edit-form > input{
-  padding: 0.8rem 1rem;
+  padding: 1rem;
   border-radius: 8px;
   letter-spacing: 0.05rem;
   color: var(--brown-10);
   font-size: 1rem;
-  border: 1px solid lightgray;
+  border: none;
+  font-weight: 500;
+  background: transparent;
+  border: 2px solid var(--brown-80);
 }
 
 .post-detail-post-edit-form > textarea {
@@ -2005,37 +2017,43 @@ Post Detail
   overflow-y: auto;
   padding: 0.8rem 1rem;
   color: var(--brown-10);
-  border: 1px solid lightgray;
+  background: transparent;
+  border: 2px solid var(--brown-80);
 }
 
 .post-detail-post-edit-btns {
   justify-self: end;
   display: flex;
   align-items: center;
-  gap: 0.5rem
+  gap: 0.5rem;
+  margin-top: 0.5rem
 }
 
 .post-detail-post-edit-btn-submit {
-  padding: 0.4rem 0.8rem;
+  padding: 0.7rem 1.4rem;
   background: var(--orange-50);
   color: white;
-  border-radius: 30px;
-  font-size: 0.9rem;
+  border-radius: 25px;
   letter-spacing: 0.05rem;
   border: none;
   cursor: pointer;
+  font-weight: 500;
+  font-size: 1rem;
+  text-transform: uppercase;
 }
 
 .post-detail-post-edit-btn-cancel {
-  padding: 0.4rem 0.8rem;
+  padding: 0.7rem 1.4rem;
   background: none;
   color: white;
   background: var(--black-30);
-  border-radius: 30px;
-  font-size: 0.9rem;
+  border-radius: 25px;
   letter-spacing: 0.05rem;
   border: none;
   cursor: pointer;
+  font-weight: 500;
+  font-size: 1rem;
+  text-transform: uppercase;
 }
 
 .post-detail-post-edit-form > textarea:focus,
@@ -2051,7 +2069,7 @@ Post Detail
   gap: 0.5rem;
   border-radius: 15px;
   margin: 2.5rem 0;
-  border: 1px solid var(--black-80);
+  border: 2px solid var(--brown-80);
 }
 
 .child-comment-form {
@@ -2073,6 +2091,12 @@ Post Detail
   background: transparent;
 }
 
+.comment-form-textarea::placeholder {
+  font-weight: 500;
+  color: hsl(0, 0%, 30%);
+  letter-spacing: 0.05rem;
+}
+
 .comment-form-textarea:focus {
   outline: none;
 }
@@ -2087,26 +2111,28 @@ Post Detail
 }
 
 .comment-btn-submit {
-  padding: 0.4rem 0.8rem;
+  padding: 0.7rem 1.4rem;
   background: var(--orange-50);
   color: white;
-  border-radius: 30px;
+  border-radius: 25px;
   letter-spacing: 0.05rem;
   border: none;
   cursor: pointer;
-  font-size: clamp(0.7rem, 1dvw + 0.5rem, 0.9rem);
+  font-weight: 500;
+  font-size: 1rem;
+  text-transform: uppercase;
 }
 
 .comment-btn-cancel {
-  padding: 0.4rem 0.8rem;
-  background: none;
+  padding: 0.7rem 1.4rem;
   color: white;
   background: var(--black-30);
-  border-radius: 30px;
+  border-radius: 25px;
   letter-spacing: 0.05rem;
   border: none;
   cursor: pointer;
-  font-size: clamp(0.7rem, 1dvw + 0.5rem, 0.9rem);
+  font-weight: 500;
+  font-size: 1rem;
 }
 
 /* comments */
@@ -2288,9 +2314,9 @@ Post Detail
   display: grid;
   gap: 0.5rem;
   align-content: start;
-  border-radius: 10px;
+  border-radius: 15px;
   margin: 1.5rem 0rem 1.5rem 0.7rem;
-  border: 1px solid lightgray;
+  border: 2px solid var(--brown-80);
 }
 
 .post-detail-update-comment-textarea {
@@ -2300,8 +2326,9 @@ Post Detail
   letter-spacing: 0.05rem;
   line-height: 1.4;
   color: var(--brown-10);
-  border-radius: 10px;
+  border-radius: 15px;
   padding: 1rem;
+  background: transparent;
 }
 
 .post-detail-update-comment-textarea:focus {
@@ -2318,25 +2345,29 @@ Post Detail
 }
 
 .post-detail-update-comment-update-btn {
-  padding: 0.4rem 0.8rem;
+  padding: 0.7rem 1.4rem;
   background: var(--orange-50);
   color: white;
   text-align: center;
-  border-radius: 30px;
+  border-radius: 25px;
   border: none;
   cursor: pointer;
-  font-size: clamp(0.7rem, 1dvw + 0.5rem, 0.9rem);
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 1rem;
 }
 
 .post-detail-update-comment-cancel-btn {
-  padding: 0.4rem 0.8rem;
+  padding: 0.7rem 1.4rem;
   background: var(--black-30);
   color: white;
   text-align: center;
-  border-radius: 30px;
+  border-radius: 25px;
   border: none;
   cursor: pointer;
-  font-size: clamp(0.7rem, 1dvw + 0.5rem, 0.9rem);
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 1rem;
 }
 /* end */
 
@@ -3612,23 +3643,24 @@ FOOTER
 ====== */
 .footer-container {
   background: var(--brown-10);
+  align-content: start;
+  display: grid;
 }
 
 .footer-container__contents {
   width: 90%;
   max-width: 1400px;
-  margin: 0 auto;
+  margin: 4rem auto;
   display: grid;
-  row-gap: 2.5rem;
-  padding: 2rem 0;
-  padding-bottom: 0;
-  align-items: start;
+  align-content: start;
+  row-gap: 4rem;
+  column-gap: 3rem;
 }
 
 .footer-container__brand-container {
   display: grid;
   align-content: start;
-  gap: 1.5rem;
+  gap: 1.3rem;
 }
 
 .footer-container__logo {
@@ -3638,81 +3670,55 @@ FOOTER
 }
 
 .footer-container__brand-logo {
-  width: 45px;
-  height: 100%;
+  width: 50px;
   aspect-ratio: 1/1;
   object-fit: cover;
   border-radius: 50%;
   display: block;
-  background: var(--orange-30);
-  padding: 0.3rem
+  background: var(--orange-25);
+  padding: 0.4rem
 }
 
 .footer-container__brand-name {
   font-size: 2rem;
-  font-weight: 600;
+  font-weight: 500;
   color: white;
-  line-height: 0;
+  line-height: 1;
 }
 
-.footer-container__brand-text > p {
-  color: var(--black-80);
+.footer-container__brand-text {
+  color: var(--black-90);
   letter-spacing: 0.05rem;
-  line-height: 1.4;
+  line-height: 1.5;
   max-width: 400px;
-  text-wrap: balance;
+  text-wrap: pretty;
 }
 
 .footer-container__quick-links {
   display: grid;
-  gap: 1.5rem;
+  gap: 1.3rem;
   align-content: start;
 }
 
 .quick-links-header {
   color: white;
-  font-size: 1.4rem;
-  font-weight: 600;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 
 .quick-links {
   display: grid;
+  align-content: start;
   gap: 0.5rem
 }
 
-.quick-nav-link > a {
+.quick-link {
   color: var(--black-80)
 }
 
 .active-quick-link {
   color: var(--orange-50) !important;
   font-weight: 600;
-}
-
-.social-links {
-  width: 95%;
-  max-width: 1200px;
-  margin: 2rem auto;
-  margin-top: 5rem;
-}
-
-.social-links-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.8rem;
-}
-
-.social-links-container > a {
-  font-size: 2rem;
-  color: var(--brown-60);
-}
-
-@media (hover){
-  .social-links-container > a:hover {
-    color: var(--focus)
-    
-  }
 }
 
 .contact-us-container {
@@ -3724,126 +3730,55 @@ FOOTER
 .contact-us-header {
   grid-column: 1 / -1;
   color: white;
-  font-size: 1.4rem;
-  font-weight: 600;
-}
-
-.contacts {
-  display: grid;
-  align-content: start;
-  gap: 2rem;
-}
-
-.contact {
-  display: grid;
-  align-content: start;
-  gap: 0.6rem;
-}
-
-.address {
-  display: flex;
-  align-items: start;
-  gap: 1rem;
-}
-
-.address > i {
-  font-size: 1.4rem;
-  color: var(--black-40);
-  padding-top: 0.3rem
-}
-
-.address > p {
-  color: var(--black-80);
-  font-size: 0.9rem;
-  letter-spacing: 0.07rem;
-  line-height: 1.5;
-  max-width: 300px;
-}
-
-.email {
-  display: flex;
-  align-items: start;
-  gap: 1rem;
-}
-
-.email > i {
-  font-size: 1.4rem;
-  color: var(--black-40);
-  padding-top: 0.3rem
-}
-
-.email > a {
-  color: var(--black-80);
-  font-size: 0.9rem;
-  letter-spacing: 0.07rem;
-  padding-top: 0.3rem;
-  border-bottom: 2px solid transparent;
-}
-
-.phone {
-  display: flex;
-  align-items: start;
-  gap: 1rem;
-}
-
-.phone > i {
-  font-size: 1.4rem;
-  color: var(--black-40);
-  padding-top: 0.3rem
-}
-
-.phone > a {
-  color: var(--black-80);
-  font-size: 0.9rem;
-  letter-spacing: 0.07rem;
-  border-bottom: 2px solid transparent;
-}
-
-@media (hover) {
-  .phone > a:hover,
-  .email > a:hover{
-    border-bottom: 2px solid var(--focus);
-  }
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 
 .contact-form {
   display: grid;
-  gap: 0rem;
+  align-content: start;
+  gap: 1rem;
 }
 
-.contact-form > input {
-  padding: 0.8rem 1rem 0.2rem 0.2rem;
-  margin-bottom: 1rem;
-  border: none;
+.contact-us-input-container {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.contact-us-input-container > label {
+  color: var(--black-90);
+  letter-spacing: 0.05rem;
+  font-weight: 500;
+}
+
+.contact-us-input-container > input {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 1rem;
   font-size: 1rem;
   letter-spacing: 0.05rem;
-  background: none;
-  color: var(--black-70);
-  border-bottom: 2px solid var(--black-80);
-}
-
-.contact-form > label {
-  color: white
-}
-
-.contact-form > textarea {
-  padding: 0.8rem 1rem 0.2rem 0.2rem;
-  margin-bottom: 1rem;
+  color: var(--black-20);
   border: none;
+  border-radius: 8px;
+  background: var(--brown-90)
+}
+
+.contact-us-input-container > textarea {
+  padding: 1rem;
   resize: vertical;
-  min-height: 100px;
-  max-height: 150px;
+  min-height: 150px;
   font-size: 1rem;
-  background: none;
-  color: var(--black-70);
+  color: var(--black-20);
   letter-spacing: 0.05rem;
   line-height: 1.4;
-  border-bottom: 2px solid var(--black-80);
+  border: none;
+  background: var(--brown-90);
+  border-radius: 8px;
 }
 
 #contactEmail:focus,
 #contactMessage:focus{
-  outline: none !important;
+  outline: 2px solid var(--focus);
 }
 
 .contact-form > button {
@@ -3853,11 +3788,37 @@ FOOTER
   color: white;
   background: var(--orange-50);
   text-transform: uppercase;
-  letter-spacing: 0.07rem;
+  letter-spacing: 0.05rem;
   font-weight: 500;
   cursor: pointer;
-  font-size: 1.05rem;
+  font-size: 1rem;
   margin-top: 0.5rem;
+}
+
+.social-links {
+  width: 90%;
+  max-width: 1400px;
+  margin: 0 auto;
+  margin-bottom: 4rem;
+}
+
+.social-links-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+}
+
+.social-links-container > a {
+  font-size: 3rem;
+  color: var(--brown-60);
+}
+
+@media (hover){
+  .social-links-container > a:hover {
+    color: var(--focus)
+    
+  }
 }
 
 .copy-right {
@@ -3877,41 +3838,16 @@ FOOTER
   text-align: center;
 }
 
-@media (min-width: 600px) {
+@media screen and (min-width: 700px) {
   .footer-container__contents {
-    width: 90%;
-  }
-
-  .social-links {
-    width: 90%;
+    grid-template-columns: 2fr 1fr;
   }
 }
 
-@media (min-width: 700px) {
+@media screen and (min-width: 950px) {
   .footer-container__contents {
-    width: 90%;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 4rem;
-  }
-}
-
-@media (min-width: 750px) {
-  .footer-container__contents {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-width: 900px) {
-  .footer-container__contents {
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 4rem;
-    row-gap: 0;
-  }
-
-  .contact-form > button {
-    justify-self: end;
-    padding: 0.5rem 1.5rem;
-    font-size: 1rem;
+    grid-template-columns: 2fr 1fr 2fr;
+    row-gap: 4rem;
   }
 }
 
